<resources>
    <string name="app_name">FooBar</string>
    <!-- Facebook Id -->
    <string name="facebook_app_id">647257516114928</string>
    <string name="fb_login_protocol_scheme">fb647257516114928</string>


    <string name="title">Bar Welcomes you</string>

    <!-- Launcher -->
    <string name="launcher_title">Good Food, \nGood Mood</string>
    <string name="sub_title">happy customer, happy life</string>
    <string name="connect_with_facebook_google">Connect with facebook or google</string>
    <string name="sign_in">Sign in</string>

    <string name="food_menu">Food Menu</string>
    <string name="search_dishes">Search for dishes</string>
    <string name="bbq_chicken">BBQ Chicken</string>
    <string name="description">Fresh pan crust pizza topped with Chicken Pepperoni</string>
    <string name="pieces">4 Pieces</string>
    <string name="quantity">Quantity</string>

    <string name="restaurant">Restaurant</string>
    <string name="bar">Bar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="open_tab">Open Tab</string>

    <string name="img_desc">No Image</string>
    <string name="recent_check_in">Recent Check In’s</string>
    <string name="place_device_against_the_tag">Place device \nagainst the Tag</string>
    <string name="or">OR</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="contact">Contact</string>
    <string name="close_tab">Close Tab</string>
    <string name="add_to_order">Add to Order</string>
    <string name="view">View</string>
    <string name="my_order">My Order</string>
    <string name="checkout">Checkout</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="total">Total</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_ready">Your order will be ready in 15 mins</string>
    <string name="taxes_charges">Taxes</string>
    <string name="your_order_is_successfully_placed">Your order is successfully \nplaced.</string>
    <string name="your_order_is_successfully_updated">Your order is successfully \nUpdated.</string>
    <string name="your_can_track">You can track the order in the \n"Orders" section.</string>
    <string name="text_continue">Continue</string>
    <string name="go_to_orders">Go to orders</string>
    <string name="edit_order">Edit Order</string>
    <string name="show_code">Show Code</string>
    <string name="close">Close</string>
    <string name="add_a_tip">Add a tip</string>
    <string name="item_total">Item Total</string>
    <string name="tip_for_server">Tip for server</string>
    <string name="total_with_dots">Total:</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="tab_closed_msg">Your tab is now Closed</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number</string>
    <string name="payment">Payment</string>
    <string name="date">Date</string>
    <string name="order_summary">Go To Home</string>
    <string name="bill_details">Bill Details</string>
    <string name="sub_total">Sub Total</string>
    <string name="add_more">Add More</string>
    <string name="touch_id">Pay with Touch ID</string>
    <string name="card_number">**** **** **** 5967</string>
    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="notification_one">Your drink is ready. Pickup at counter by showing code.</string>
    <string name="notification_two">Your tab is closed due to inactivity for long time or away from restaurant location.</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_name">John Doe</string>
    <string name="settings_location">San Francisco, CA</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_general">General</string>
    <string name="settings_account">Account</string>
    <string name="settings_help">Help</string>


</resources>
