<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PaymentMethodActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/llNavigation"
        android:layout_height="@dimen/margin_size_50">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_size_15"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/ic_arrow_back" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNavigation"
        android:layout_marginStart="@dimen/margin_size_30"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_vertical"
        android:id="@+id/tvCheckout"
        android:text="@string/checkout"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCheckout"
        app:cardElevation="@dimen/margin_size_5"
        android:layout_margin="@dimen/margin_size_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_10"
                android:layout_marginStart="@dimen/margin_size_10"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:text="@string/payment_method"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_15" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvPaymentMethod"
                android:layout_marginTop="@dimen/margin_size_10" />

            <Button
                android:id="@+id/btPayment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_size_50"
                android:layout_margin="@dimen/margin_size_20"
                android:background="@drawable/bg_yellow"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/payment"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:id="@+id/tvTouchID"
        android:layout_marginBottom="@dimen/margin_size_30"
        android:layout_alignParentBottom="true"
        android:text="@string/touch_id"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

</RelativeLayout>