<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/launcher_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_40" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/sub_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signInLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/connect_with_facebook_google"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_title_size"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/fbCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/fbIcon"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:background="@color/yellow"
                android:padding="8dp"
                android:src="@drawable/ic_fb_logo" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="or"
            android:textColor="@color/yellow"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/googleCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/iconIMG"
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:padding="8dp"
                android:src="@drawable/ic_google_logo" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/btRest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_50"
        android:layout_above="@+id/btBar"
        android:layout_margin="@dimen/margin_size_20"
        android:background="@drawable/bg_white"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16" />

    <Button
        android:id="@+id/btBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_size_50"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_size_20"
        android:background="@drawable/bg_white"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16" />

</RelativeLayout>