<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.RecentCheckInFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_15"
            android:layout_marginTop="@dimen/margin_size_10"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/recent_check_in"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_size_10"
            android:layout_marginTop="@dimen/margin_size_15"
            android:layout_weight="0.6"
            android:adjustViewBounds="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOpen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_marginStart="@dimen/margin_size_20"
            android:layout_marginTop="@dimen/margin_size_20"
            android:layout_marginEnd="@dimen/margin_size_20"
            android:layout_marginBottom="@dimen/margin_size_30"
            android:background="@drawable/bg_yellow"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_desc"
                android:src="@mipmap/ic_glass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_10"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/open_tab"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>

    </LinearLayout>
</layout>