<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_size_50">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_size_15"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_size_20"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_vertical"
            android:text="@string/my_order"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="270dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_60"
            android:layout_above="@+id/ll_cart_view"
            android:background="@drawable/top_cornor_yellow_bg"
            android:elevation="@dimen/margin_size_5"
            android:paddingStart="@dimen/margin_size_10"
            android:paddingTop="@dimen/margin_size_10"
            android:paddingEnd="@dimen/margin_size_10"
            android:paddingBottom="@dimen/margin_size_20">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_20"
                android:layout_weight="1"
                android:contentDescription="@string/img_desc"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sub_total"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_size_20"
                android:contentDescription="@string/img_desc"
                android:fontFamily="@font/montserrat_regular"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cart_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_size_220"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-15dp"
            android:background="@drawable/top_corner_black_bg"
            android:elevation="@dimen/margin_size_5"
            android:orientation="vertical"
            android:padding="@dimen/margin_size_10">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_20"
                android:layout_marginTop="@dimen/margin_size_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_desc"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/taxes_charges"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_size_20"
                    android:contentDescription="@string/img_desc"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="$28"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_size_20"
                android:layout_marginTop="@dimen/margin_size_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_desc"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_size_20"
                    android:contentDescription="@string/img_desc"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="$128"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

            <Button
                android:id="@+id/btCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_size_70"
                android:layout_margin="@dimen/margin_size_20"
                android:background="@drawable/bg_yellow"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/show_code"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

